# NTO_examples

./: .gitignore  README.md  calibration_data.npz  main.py  pyproject.toml
data/: anno.yaml  annotations.csv  lol.txt
examples/aruco/: detect_code.py  generate_dict.py  tempCodeRunnerFile.py
examples/fastapi/: min.py
examples/opencv/: calc_camera_params_neuro.py  calibre.py  video.py
examples/requests/: min.py
examples/ros/publisher_example/: package.xml
examples/ros/publisher_example/src/: publisher_example.py
examples/ros/subscriber_example/: package.xml
examples/ros/subscriber_example/src/: .subscriber_example.py.swp  subscriber_example.py
examples/rpicam-opencv/: camera.py
examples/sockets/: client.py
examples/sockets/server/: alt_server.py  main.py
examples/torch/: compiled_class.ipynb  test_train_Crack_regression.ipynb  train_cycle.ipynb  train_yolo.ipynb
notes/: bash_shortcuts.md  ros_shpargalka.md  сочентание клавишь.txt
notes/Библиотеки python/: API для python.md  Argparse.md  Conda.md  MatPlotLib.md  Mutagen.md  Os.md  Pandas2.md  Pathlib.md  Pip python.md  Random.md  Shutil.md  Subprocess.md  Sys.md  numpy.md  opencv.md  pandas.md  uv.md
